@@ -1,6 +1,6 @@
 # java.lang.OutOfMemoryError  
 자바에서 힙 메모리(heap memory) 가 부족할 때 발생하는 에러  
-톰캣은 실행중인 상태에서 애플리케이션이 해당 에러로 멈춘상태에서 발견됨  
+톰캣은 실행중인 상태에서 애플리케이션만 해당 에러로 멈춘상태에서 발견됨  
 ```.sh
 # resolve links - $0 may be a softlink
 PRG="$0"
@@ -15,12 +15,14 @@ while [ -h "$PRG" ]; do
   fi
 done
 
-# 힙 메모리 용량을 확장 <<<<<<
-JAVA_OPTS="-Xms1024m -Xmx2048m -XX:MaxPermSize=1024m" 
+# 힙 메모리 용량을 확장
+# 최소 1024m ~ 최대 2048
+JAVA_OPTS="-Xms1024m -Xmx2048m" 
 
 # Get standard environment variables
 PRGDIR=`dirname "$PRG"`
 ```
+> default 힙 메모리는 64mb
 
 ps -ef | grep tomcat
 ```.sh
